obsolete/base/services/webdav/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webdav-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`webdav.${CLUSTER_DOMAIN}`)
      services:
        - name: webdav
          port: 80
      middlewares: # TODO move basic auth to traeifk, out of container
        - name: traefik-secure-headers
          namespace: kube-system
  tls:
    certResolver: cloudflare
